# antity

./: .gitignore  .travis.yml  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  appveyor.yml  codecov.yaml
.github/workflows/: Windows.yml  cmake.yml  ubuntu.yml  windows.yml
Testing/: TAG
Testing/20210519-1920/: Test.xml
Testing/Temporary/: LastCoverage_20210519-1920.log.tmp
antity/: antity.vcxproj  antity.vcxproj.filters
antity/src/: antity.cpp
antity/src/core/: Identifier.h
antity/src/core/ECS/: Archetype.h  Archetype.hpp  ArchetypeAllocator.h  ArchetypeHandler.hpp  ArchetypeMap.h  ArchetypeMap.hpp  Component.h  Component.hpp  Identifier.h  Identifier.hpp  Record.hpp  RegisteryDebugger.hpp  Registry.h  Registry.hpp  View.hpp
antity/src/core/ECS/Deprecated/: OldArchetype.h  OldArchetypeMap.hpp
antity/src/core/Utility/: Hasher.h  Iterator.hpp  TypeList.h  TypeTraits.h  VectorSequence.hpp
benchmark/: CMakeLists.txt
benchmark/src/: main.cpp
include/antity/: antity.h
include/antity/core/: Archetype.h  ArchetypeAllocator.h  ArchetypeHandler.h  ArchetypeMap.h  Component.h  ComponentArray.h  Identifier.h  Record.h  RegisteryDebugger.h  Registry.h  View.h  archetype.hpp  archetype_allocator.hpp  archetype_handler.hpp  archetype_map.hpp  component.hpp  component_array.hpp  identifier.hpp  record.hpp  registry.hpp  registry_debugger.hpp  view.hpp
include/antity/utility/: Hasher.h  Iterator.h  TypeList.h  TypeTraits.h  UniqueIdDispenser.h  VectorSequence.h  VectorTuple.h  function_traits.hpp  hasher.hpp  robin_hood.h  robin_hood.hpp  unique_id_dispenser.hpp
test/: CMakeLists.txt
test/src/: main.cpp
test/src/Registry/: Registry.cpp
test/src/Utility/: Iterators.cpp  TypeIDGenerator.cpp
test/src/utility/: type_id_generator.cpp
unitTest/Test/Archetypes/: Archetypes.cpp  ArchetypesMap.cpp
unitTest/Test/Components/: Components.cpp
unitTest/Test/Registry/: Registry.cpp
unitTest/Test/Utility/: Iterators.cpp  TypeIDGenerator.cpp
